-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.3.0-beta1
-
None
-
a17919fbd05c9ed5094d640d57ca7747f790dc96
Hi,
After a61b6dfc57c1ecc3627a4a9d20a34b28dade81b3 (Debugger: Move command flags to debugger command) commit BareMetal plugin broken.
All "Init commands" and "Reset commands" that does not contain space (" ") or hyphen ("-") in name interpreters as a Python command. Example of the command: "load".
Same for:
a) empty lines
b) commented lines (starts with "#")
WA: add space at the beginning of the each line.
Note, that this commands must be interpret as a GDB commands itself in all cases. If python call required, it must be called manually.
For Gerrit Dashboard: QTCREATORBUG-17594 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
182914,2 | Debugger: Allow explicitly marking of non-Python commands again | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |